@@ -106,6 +106,7 @@
     <Compile Include="HostSourceTests.cs" />
     <Compile Include="Infrastructure\Rfc7230UtilityTests.cs" />
     <Compile Include="OwinEnvironmentSpecBase.cs" />
+    <Compile Include="PKPMiddlewareTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StrictTransportSecurityMiddlewareSpecs.cs" />
     <Compile Include="XssProtectionHeaderMiddlewareSpecs.cs" />
